# AutoSurgView-

./: .gitignore  LICENSE  README.md  README_CN.md
docs/: DEPENDENCIES.md
operator-console/: App.xaml  App.xaml.cs  AutoSurgView.OperatorConsole.csproj  Auto_up_and_down.xaml  Auto_up_and_down.xaml.cs  CHCNetSDK.cs  Fail.xaml  Fail.xaml.cs  Notice.xaml  Notice.xaml.cs  Notice_2.xaml  Notice_2.xaml.cs  Page1.xaml  Page1.xaml.cs  Page2.xaml  Page2.xaml.cs  Page3.xaml  Page3.xaml.cs  Page4.xaml  Page4.xaml.cs  Page5.xaml  Page5.xaml.cs  Page6.xaml  Page6.xaml.cs  Page7.xaml  Page7.xaml.cs  Page8.xaml  Page8.xaml.cs  Page9.xaml  Page9.xaml.cs  PageTest.xaml  PageTest.xaml.cs  Record_Tool.cs  STLFilter.cs  SetWindow.cs  focus.xaml  focus.xaml.cs
operator-console/native/: README.md
robot-controller/: CMakeLists.txt  IQmath.cpp  IQmath.h  LiftingColumn.cpp  LiftingColumn.h  button.cpp  button.h  camera.cpp  camera.h  collision.cpp  collision.h  joystick.cpp  joystick.h  lidar.cpp  lidar.h  main.cpp  main.h  midaco.c  motor.cpp  motor.h  motor_debug.cpp  motor_work.cpp  motor_work.h  obstacle_optimization.cpp  obstacle_optimization.h  occlusion_avoidance.cpp  occlusion_avoidance.h  q_tree.cpp  q_tree.h  resource.h  rs_camera_work.cpp  rs_camera_work.h  ssbot_config.cpp  ssbot_config.h  ssbot_control.cpp  ssbot_control.h  svm.cpp  udp.cpp  udp.h  udp_control.cpp  (+3 more)
robot-controller/config/: parameters.example.txt
robot-controller/models/: ppo_AnzhenRobotContinue_new9.onnx
